--- a/01/index.html
+++ b/01/index.html
@@ -1,1 +1,11 @@
-<p> <span> hola </p> </span>
+<!DOCTYPE html>
+<html>
+<head>
+<title> hola</title>
+</head>
+
+<p> 
+	<span> hola 
+	</span>
+</p>
+</html>
