--- a/02/index.html
+++ b/02/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <title></title>
-</body>
-<head>
 
+<head>
+    <title>lala</title>
 
 </head>
+<body></body>
+
+
+
+
 </html>
