--- a/24/110000 p.html
+++ b/24/110000 p.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	 <style type="text/css">
+     div {background-color:yellow} </style>
+
+
 	<style>
 		p {
 			color: red;
@@ -9,8 +13,8 @@
 	</style>
 </head>
 <body>
-	<div>
-		<p> Hellowww </p>
+	<div> 
+		<p style= "color:pink">  Hellowww </p>
 	</div>
 
 	<div>
