--- a/11/index.html
+++ b/11/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" href="">
+	<title>xx</title>
+	<link rel="stylesheet" href="xx">
 </head>
 <body>
 
-	<p style="color:red> Párrafo rojo </p>
+	<p style="color:red"> Párrafo rojo </p>
 
 </body>
 </html>
