--- a/21/index.html
+++ b/21/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
+	<title>lala</title>
     <meta charset="utf-8">
 </head>
+
 <body>
     <div style="color:yellow">
-        <p> Goooooood byeeeee !! </p style="color:red">
+        <p> Goooooood byeeeee !! </p>
+    </div>   
         <p> Holaaaa !!! </p>
-    </div>
+  
 </body>
 </html>
