--- a/23/index.html
+++ b/23/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<style>
+	 <style type="text/css">
+     p {color:green} </style>
 
-		<p> {
-			color:  green;
-		}
+		
 	</style>
 </head>
 <body>
