--- a/26/113000 p.html
+++ b/26/113000 p.html
@@ -3,17 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
+	<title>xx</title>
 	<link rel="stylesheet" href="">
-	<style>
-		font-family: 'Slabo 27px', serif;
+		 <style type="text/css">
+     h1 {font-family: 'Slabo 27px', serif;} </style>
+		
 	</style>
 </head>
 <body>
 
-	<img src="images/logo.png" alt="logo desafio latam" >
+	<img src="../images/logo.png" alt="logo desafio latam" >
 	<h1> Deafío Latam </h1>
 	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam quaerat beatae architecto possimus explicabo ex, temporibus, reprehenderit, deserunt alias excepturi quidem molestias, magnam hic asperiores sapiente animi. Ex, provident, consectetur! </p>
-	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+	<a href="https://fonts.googleapis.com/css?family=Slabo+27px"> LALI </a>
 </body>
 </html>
